--- a/package.json
+++ b/package.json
@@ -1,81 +1,89 @@
 {
-    "name": "autoconf",
-    "displayName": "autoconf",
-    "description": "Syntax support for the Autoconf M4 and Automake files (Autotools)",
-    "version": "0.0.7",
-    "icon": "icon.png",
-    "publisher": "maelvalais",
-    "repository": "https://github.com/maelvalais/vscode_autotools",
-    "license": "MIT",
-    "engines": {
-        "vscode": "^1.10.0"
-    },
-    "categories": [
-        "Languages"
-    ],
-    "contributes": {
-        "languages": [
-            {
-                "id": "m4",
-                "aliases": [
-                    "Autoconf M4",
-                    "m4"
-                ],
-                "extensions": [
-                    "configure.ac",
-                    "configure.in",
-                    ".m4"
-                ],
-                "configuration": "./language-configuration.json"
-            },
-            {
-                "id": "automake",
-                "aliases": [
-                    "Automake",
-                    "automake"
-                ],
-                "extensions": [
-                    ".am",
-                    ".am.inc",
-                    "Makefile.in"
-                ],
-                "configuration": "./language-configuration.json"
-            },
-            {
-                "id": "makefile2",
-                "aliases": [
-                    "Makefile2",
-                    "makefile2"
-                ],
-                "extensions": [],
-                "configuration": "./language-configuration.json"
-            }
+  "name": "autoconf",
+  "displayName": "autoconf",
+  "description": "Syntax support for the Autoconf M4 and Automake files (Autotools)",
+  "version": "0.0.7",
+  "icon": "icon.png",
+  "publisher": "maelvalais",
+  "repository": "https://github.com/maelvalais/vscode_autotools",
+  "license": "MIT",
+  "engines": {
+    "vscode": "^1.10.0"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "contributes": {
+    "languages": [
+      {
+        "id": "m4",
+        "aliases": [
+          "Autoconf M4",
+          "m4"
         ],
-        "grammars": [
-            {
-                "language": "m4",
-                "scopeName": "source.m4",
-                "path": "./Autoconf.tmLanguage"
-            },
-            {
-                "language": "automake",
-                "scopeName": "source.automake",
-                "path": "./Automake.tmLanguage"
-            },
-            {
-                "language": "makefile2",
-                "scopeName": "source.makefile2",
-                "path": "./Makefile2.tmLanguage"
-            }
-        ]
-    },
-    "devDependencies": {
-        "plist": "latest",
-        "glob-watcher": "^4.0.0",
-        "js-yaml": "latest"
-    },
-    "scripts": {
-        "start": "node build.js -w",
-        "build": "node build.js"
-    }
+        "extensions": [
+          "configure.ac",
+          "configure.in",
+          ".m4"
+        ],
+        "configuration": "./language-configuration.json"
+      },
+      {
+        "id": "automake",
+        "aliases": [
+          "Automake",
+          "automake"
+        ],
+        "extensions": [
+          ".am",
+          ".am.inc",
+          "Makefile.in"
+        ],
+        "configuration": "./language-configuration.json"
+      },
+      {
+        "id": "makefile2",
+        "aliases": [
+          "Makefile2",
+          "makefile2"
+        ],
+        "extensions": [],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "m4",
+        "scopeName": "source.m4",
+        "path": "./Autoconf.tmLanguage",
+        "embeddedLanguages": {
+          "source.shell": "shellscript"
+        }
+      },
+      {
+        "language": "automake",
+        "scopeName": "source.automake",
+        "path": "./Automake.tmLanguage"
+      },
+      {
+        "language": "makefile2",
+        "scopeName": "source.makefile2",
+        "path": "./Makefile2.tmLanguage"
+      }
+    ]
+  },
+  "devDependencies": {
+    "glob-watcher": "^5.0.3",
+    "js-yaml": "^3.13.1",
+    "plist": "latest"
+  },
+  "scripts": {
+    "start": "node build.js -w",
+    "build": "node build.js"
+  },
+  "__metadata": {
+    "id": "3ca928a4-41a2-409c-81be-e58c381fce5a",
+    "publisherDisplayName": "maelvalais",
+    "publisherId": "3f5c0d22-1c86-4a4a-89cf-469106f50752"
+  }
 }
